[project]
name = "rl-data-cleaning-env"
version = "1.2.0"
description = "RL environment for tabular data cleaning — Meta x Scaler OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "gradio>=4.0",
    "openai>=1.0",
    "openenv>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",   # for TestClient in FastAPI tests
]

[project.scripts]
server    = "app:main"
inference = "inference:__main__"

[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.openenv]
name    = "rl-data-cleaning-env"
version = "1.2.0"
spec    = "openenv.yaml"
